--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-django
-djangorestframework
-psycopg2-binary
-django-extensions
-pyyaml
-djangorestframework
-django-rest-auth
-bcrypt
-secrets
-random
-string
+asgiref==3.4.1
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.2  
+configobj==5.0.6
+cryptography==3.4.7        
+Django==3.2.5
+django-cors-headers==3.7.0 
+django-extensions==3.1.3   
+django-rest-auth==0.9.5    
+djangorestframework==3.12.4
+future==0.18.2
+idna==3.2
+psycopg2-binary==2.9.1     
+pyasn1==0.4.8
+pyasn1-modules==0.2.8      
+pycparser==2.20
+pyOpenSSL==20.0.1
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.26.0
+six==1.16.0
+sqlparse==0.4.1
+systematic==4.8.7
+typing-extensions==3.10.0.0
+urllib3==1.26.6
